apo/css/home.css
body {
   margin: 0;
   padding: 0;
}

@media all and (min-device-width:384px) {
  body, .logo-container, footer {
    min-width: 749px; 
  }
}

nav {
  font-family: 'Josefin Sans', sans-serif;  
  font-weight: 300;
}

nav ul {    
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
  text-transform: uppercase;
}

nav ul li {  
  display: inline-block;
  font-size: 2em;  
}

@media all and (min-width: 992px) and (max-width: 1199px) {
  nav ul li { font-size: 1.8em; }
}

@media all and (min-width: 1200px) {
  nav ul li { font-size: 1.5em; }
}

nav a {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 10px 15px;
  line-height: 30px;
  text-transform: uppercase;
  text-decoration: none; 
  text-shadow: 1px 1px 0 rgba(255,255,255,.25);
  color: #fff;
}

.dropdown-content {
  display: none;
  position: absolute;
  background: #ebebeb;
  padding: 10px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;  
  z-index: 100;
}

.dropdown-content a {
  display: block;
  text-align: left;
  color: #000;
}

.dropdown:hover .dropdown-content {
  display: block;
}

@media all and (max-device-width:767px) {
  nav ul li { font-size: 1em; }
  nav a { padding: 10px 5px; }
  .dropdown-content { padding: 5px; }
}

@media all and (max-device-width:767px) and (orientation: landscape) {
  nav ul li { font-size: 1.5em; }
}

.fullscreen-bg-video {
  position: fixed;    
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  z-index: -200;
}

.logo-container {
  position: absolute;
  bottom: 40px;
  width: 100%;
  text-align: center;
  background: rgba(0, 0, 0, 0.5);
}

.logo {
  height: 200px;
  min-width: 600px;
}

@media all and (max-device-width:375px) and (orientation:portrait) {
  .fullscreen-bg-video { height: 100vh }
  .logo { height: auto; min-width: auto; max-width: 80vw; }
}

@media all and (max-device-width:375px) and (orientation:landscape) {
  .fullscreen-bg-video { height:auto; width: 100vw; }  
  .logo { height: auto; min-width: auto; max-width: 80vw; }
}

footer {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 5px 0;
  bottom: 0;  
  height: 40px;
  width: 100%;
  background: #EBEBEB;
}

a {
  margin-right: 15px; 
  color: black;
  text-decoration: none;
}

@media all and (min-width:768px) {
  a {
    margin-right: 25px;
  }
}

